@@ -1,4 +1,9 @@
 ==============================================================
+Change Log for wgXPiwik - 2016/08/09 11:50 Version 1.06 RC1
+==============================================================
+renamed table 'mod_wgxpiwik_perms' into 'wgxpiwik_perms'
+
+==============================================================
 Change Log for wgXPiwik - 2016/08/09 08:30 Version 1.05 RC2
 ==============================================================
 cosmetics
